Revision history for {{$dist->name}}

{{$NEXT}}
  - add to standard diagnostic
  - assume installer = ModuleBuild and mb_class = My::ModuleBuild if inc/My/ModuleBuild.pm is found
  - whitelist some commonly used tech spellings to pod system spelling test
  - add unused_vars.t release test

1.45      2014-04-08 11:04:49 -0400
  - allow override of diagnostic reporter with [Test] diag = +/-module or [@ACPS] diag = +/-module

1.44      2014-02-21 16:02:07 -0500
  - diagnostic doesn't preload EV unless it is a suggested prereq

1.43      2013-12-31 12:28:13 -0500
  - look for inc/run for scripted phase hooks

1.42      2013-12-21 17:09:01 -0500
  - slim down the prereqs.

1.41      2013-12-14 06:15:47 -0500
  - Don't allow release on MSWin32
  - Don't allow release on Perl 5.8 (implemented, but not documented in 1.40)

1.40      2013-12-13 22:16:55 -0500
  - Support Perl 5.8

1.39      2013-12-12 17:53:49 -0500
  - new dists use ModuleBuild

1.38      2013-12-05 18:29:39 -0500
  - added undocumented non_native_release option for [@Author::Plicease]

1.37      2013-11-27 12:37:59 -0500
  - added release_tests_skip option for [@Author::Plicease]

1.36      2013-11-19 10:27:13 -0500
  - mb_class option on [@Author::Plicease] passes to [ModuleBuild]

1.35      2013-11-18 07:55:09 -0500
  - rm dep on [Alien]

1.34      2013-11-11 17:49:01 -0500
  - [@Author::Plicease] alien_build_command and alien_install_command be mvp

1.33      2013-11-07 12:03:21 -0500
  - update version test

1.32      2013-11-07 11:28:33 -0500
  - support for [Alien] as the builder

1.31      2013-10-16 03:34:17 -0400
  - use [Bootstrap::lib] and relatives for release more consistent
    with my other distros

1.30      2013-10-15 11:54:55 -0400
  - make xt/release/version.t less strict, so that test versions
    (eg. 0.01_01) are allowed
  - fix for the regex removing the version from README.md so that
    it works for test versions (eg. 0.01_01)

1.29      2013-10-14 14:57:46 -0400