@@ -88,16 +88,19 @@ sub before_build
     $t_config->openw->print(<<EOF);
 ---
 pod_spelling_system:
+  skip: 0
   # list of words that are spelled correctly
   # (regardless of what spell check thinks)
   stopwords: []
 
 pod_coverage:
+  skip: 0
   # format is "Class#method" or "Class", regex allowed
   # for either Class or method.
   private: []
 
 unused_vars:
+  skip: 0
   global:
     ignore_vars: []
   module: []
